# odapclean

./: .gitignore  PRD_OdapClean_260206  render.yaml  test_scenario.py
backend/: .env  main.py  models.py  pyproject.toml  requirements.txt  schema.sql  verify_storage.py
backend/db/: create_storage_bucket.sql  schema.sql  schema_v2.sql  seed_2022_revised.sql
backend/scripts/: insert_curriculum.py  verify_curriculum.py
backend/sql/: 001_add_answer_image_url.sql
backend/utils/: image_processing.py
docs/: PRD_OdapClean_260208_0009.md  PRD_OdapClean_260208_1330.md  PRD_OdapClean_260208_1400.md  PRD_OdapClean_260208_1630.md  PRD_OdapClean_260208_1830.md  PRD_OdapClean_260208_1900.md  chat.md  chat_240726_1500.md  log.md  log_240726_1500.md
frontend/odapclean-frontend/: index.html  package-lock.json  package.json
frontend/odapclean-frontend/src/: App.css  App.tsx  index.css
frontend/odapclean-frontend/src/components/: BottomNavBar.tsx  ImageCropModal.css  ImageCropModal.tsx  Layout.tsx  Navbar.css  Navbar.tsx  PrivateRoute.tsx  ProblemDetailModal.css  ProblemDetailModal.tsx  Sidebar.css  Sidebar.tsx  TopHeader.tsx
frontend/odapclean-frontend/src/contexts/: AuthContext.tsx
frontend/odapclean-frontend/src/pages/: CurriculumPage.css  CurriculumPage.tsx  DashboardPage.css  DashboardPage.tsx  FolderPage.css  FolderPage.tsx  LoginPage.css  LoginPage.tsx  MainPage.css  MainPage.tsx  ProblemDetailPage.css  ProblemDetailPage.tsx  ProblemPage.css  ProblemPage.tsx  SolveIndexPage.css  SolveIndexPage.tsx  SolvePage.css  SolvePage.tsx  StatisticsPage.css  (+1 more)
(+3 files in other folders)
